fixed alignment and justify

--- a/style.sass
+++ b/style.sass
@@ -1,8 +1,11 @@
 
+
+    
 body
     display: flex
     flex-direction: column
     align-items: center
+    justify-items: center
 
 
 .cont
@@ -12,14 +15,22 @@ body
     align-items: center
     flex-direction: column
 
+
 header
-    display: flex
-    flex-direction: row
+
+    background-color: #e0eced
+    width: 100%
+    display: grid
+    grid-template-columns: 1fr 1fr 1fr
+    justify-items: center
+
+
 
 .cards
     display: grid
     grid-template-columns: 1fr 1fr 1fr
     width: 100%
+    justify-items: center
 
 .card
     width: 100px
